PDFBOX-3466: modify calls to methods deprecated in JDK9
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/1.8@1756665 13f79535-47bb-0310-9956-ffa450edef68